argocd/waiter/cloudstack/gate.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gate
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudstack-management
      app.kubernetes.io/instance: cloudstack
      app.kubernetes.io/component: gate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: gate
    spec:
      enableServiceLinks: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      containers:
        - name: gate
          image: python # replaced by kustomize
          command: [python3, /opt/gate/gate.py]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /gate/healthz
              port: http
            periodSeconds: 10
          volumeMounts:
            - name: script
              mountPath: /opt/gate
          resources:
            requests:
              cpu: 20m
              memory: 48Mi
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: script
          configMap:
            name: cloudstack-gate
---
apiVersion: v1
kind: Service
metadata:
  name: gate
spec:
  selector:
    app.kubernetes.io/name: cloudstack-management
    app.kubernetes.io/instance: cloudstack
    app.kubernetes.io/component: gate
  ports:
    - name: http
      port: 8080
      targetPort: http
